--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>daily-spark-platform</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>MODO TURBO</title>
+    <meta name="description" content="MODO TURBO - Your ultimate productivity platform" />
+    <meta name="author" content="MODO TURBO Team" />
 
-    <meta property="og:title" content="daily-spark-platform" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="MODO TURBO" />
+    <meta property="og:description" content="MODO TURBO - Your ultimate productivity platform" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@MODOTURBO" />
+    <meta name="twitter:image" content="/logo.png" />
   </head>
 
   <body>
@@ -22,3 +22,5 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
+
